tests/errors/ordre_decl/extend2.mch
MACHINE
	extend2
OPERATIONS
	op_extend2 = skip
END
